kubedefs/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vproapp-service
spec:
  selector:
    app: vproapp-clean
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vpro-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: kubevpro.65.0.105.151.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vproapp-service
            port:
              number: 80
